# worldview

./: .gitignore  README.md  package-lock.json  start_server_backend.sh
backend/: Procfile  pyproject.toml  scrape.py
backend/databases/: worldview_reddit.db
backend/src/: RedditScrapper.py  api.py  config.ini  cookies.json  news_database.py  news_scrapper.py  reddit_scrapper.py  reddit_to_db.py  twitter_data.py  twitter_database.py  twitter_scraper.py  worldview_tweet.db
backend/src/api/: pydantic_models.py  query_databases.py  server.py
backend/src/news_scraper/: news_database.py  news_scrapper.py
backend/src/query/: query_news_sentiment.py  query_reddit_sentiment.py  query_twitter_sentiment.sql
backend/src/reddit_scraper/: reddit_scraper.py  reddit_to_db.py  sentimental_analysis.py
backend/src/sentiment_analysis/: sentiment_analysis.py
backend/src/twitter_scraper/: twitter_database.py  twitter_scraper.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue  style.css
frontend/src/assets/: countries.json
frontend/src/components/: CountrySelect.vue  ResultsPanel.vue  SideBar.vue
frontend/src/router/: index.js
frontend/src/views/: CompareView.vue  CountrySelectView.vue  LandingView.vue
tests/: test_backend_api.sh
