[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "deep-translator>=1.11.4",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "geopy>=2.4.1",
    "newsapi-python>=0.2.7",
    "pycountry>=26.2.16",
    "pydantic>=2.12.5",
    "twikit>=2.3.3",
    "uvicorn>=0.41.0",
    "vadersentiment>=3.3.2",
]
